--- a/26-Stripe-Follow-Along-Nav/index.html
+++ b/26-Stripe-Follow-Along-Nav/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,6 @@
           <a href="#">About Me</a>
           <div class="dropdown dropdown1">
             <div class="bio">
-              <img src="https://logo.clearbit.com/wesbos.com" />
               <p>
                 Wes Bos sure does love web development. He teaches things like
                 JavaScript, CSS and BBQ. Wait. BBQ isn't part of web
@@ -93,8 +92,8 @@
     <style>
       html {
         box-sizing: border-box;
-        font-family: 'Arial Rounded MT Bold', 'Helvetica Rounded', Arial,
-          sans-serif;
+        font-family:
+          "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
       }
 
       *,
@@ -106,7 +105,8 @@
       body {
         margin: 0;
         min-height: 100vh;
-        background: linear-gradient(
+        background:
+          linear-gradient(
             45deg,
             hsla(340, 100%, 55%, 1) 0%,
             hsla(340, 100%, 55%, 0) 70%
@@ -190,9 +190,14 @@
         position: absolute;
         background: #fff;
         border-radius: 4px;
-        box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1),
-          0 15px 35px rgba(50, 50, 93, 0.15), 0 5px 15px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s, opacity 0.1s, transform 0.2s;
+        box-shadow:
+          0 50px 100px rgba(50, 50, 93, 0.1),
+          0 15px 35px rgba(50, 50, 93, 0.15),
+          0 5px 15px rgba(0, 0, 0, 0.1);
+        transition:
+          all 0.3s,
+          opacity 0.1s,
+          transform 0.2s;
         transform-origin: 50% 0;
         display: flex;
         justify-content: center;
@@ -249,31 +254,31 @@
       }
 
       /* Matches Twitter, TWITTER, twitter, tWitter, TWiTTeR... */
-      .button[href*='twitter'] {
+      .button[href*="twitter"] {
         background: #019fe9;
       }
-      .button[href*='facebook'] {
+      .button[href*="facebook"] {
         background: #3b5998;
       }
-      .button[href*='courses'] {
+      .button[href*="courses"] {
         background: #ffc600;
       }
     </style>
 
     <script>
-      const triggers = document.querySelectorAll('.cool > li');
-      const background = document.querySelector('.dropdownBackground');
-      const nav = document.querySelector('.top');
+      const triggers = document.querySelectorAll(".cool > li");
+      const background = document.querySelector(".dropdownBackground");
+      const nav = document.querySelector(".top");
 
       function handleEnter() {
-        this.classList.add('trigger-enter');
+        this.classList.add("trigger-enter");
         setTimeout(() => {
-          this.classList.contains('trigger-enter') &&
-            this.classList.add('trigger-enter-active');
+          this.classList.contains("trigger-enter") &&
+            this.classList.add("trigger-enter-active");
         }, 150);
-        background.classList.add('open');
+        background.classList.add("open");
 
-        const dropdown = this.querySelector('.dropdown');
+        const dropdown = this.querySelector(".dropdown");
         const dropdownRect = dropdown.getBoundingClientRect();
         const navRect = nav.getBoundingClientRect();
 
@@ -284,15 +289,15 @@
       }
 
       function handleLeave() {
-        this.classList.remove('trigger-enter', 'trigger-enter-active');
-        background.classList.remove('open');
+        this.classList.remove("trigger-enter", "trigger-enter-active");
+        background.classList.remove("open");
       }
 
       triggers.forEach((trigger) =>
-        trigger.addEventListener('mouseenter', handleEnter)
+        trigger.addEventListener("mouseenter", handleEnter),
       );
       triggers.forEach((trigger) =>
-        trigger.addEventListener('mouseleave', handleLeave)
+        trigger.addEventListener("mouseleave", handleLeave),
       );
     </script>
   </body>
